--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -8,7 +8,7 @@
         <div class="card-body">
             <h2>Welcome to Address Book</h2>
             <p>
-                <a href="#">Address Book List</a> |
+                <a href="{{ path('address_book') }}">Address Book List</a> |
                 <a href="#">Add an Address Book</a>
             </p>
         </div>
