--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -9,7 +9,7 @@
             <h2>Welcome to Address Book</h2>
             <p>
                 <a href="{{ path('address_book') }}">Address Book List</a> |
-                <a href="#">Add an Address Book</a>
+                <a href="{{ path('add_address_book') }}">Add an Address Book</a>
             </p>
         </div>
     </div>
