--- a/app/Resources/views/address_book/index.html.twig
+++ b/app/Resources/views/address_book/index.html.twig
@@ -19,7 +19,7 @@
                         </div>
                         <div class="col-3">
                             <a href="{{ path('show_address_book', { 'id': address_book.id }) }}">Details</a> |
-                            <a href="#">Edit</a> |
+                            <a href="{{ path('edit_address_book', { 'id': address_book.id }) }}">Edit</a> |
                             <a href="#">Delete</a>
                         </div>
                     </div>
