--- a/app/Resources/views/address_book/index.html.twig
+++ b/app/Resources/views/address_book/index.html.twig
@@ -20,7 +20,7 @@
                         <div class="col-3">
                             <a href="{{ path('show_address_book', { 'id': address_book.id }) }}">Details</a> |
                             <a href="{{ path('edit_address_book', { 'id': address_book.id }) }}">Edit</a> |
-                            <a href="#">Delete</a>
+                            <a href="{{ path('delete_address_book', { 'id': address_book.id }) }}" onclick="return confirm('Are you sure you want to delete this Address Book?')">Delete</a>
                         </div>
                     </div>
                 {% endfor %}
